[project]
name = "LVcal_vis"
version = "0.0.1"
description = "Some simple python code for visualizing labview outputs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "ruff>=0.11.1",
]

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'
